# GD-Editor

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  MarkdownCsvEditor.sln  MarkdownCsvEditor.vcxproj  MarkdownCsvEditor.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.github/: copilot-instructions.md
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
MarkdownCsvEditor.dir/Debug/Markdown.0747FF61.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  MarkdownCsvEditor.lastbuildstate
src/: CsvEditorWidget.cpp  CsvEditorWidget.h  FileHandler.cpp  FileHandler.h  MainWindow.cpp  MainWindow.h  MarkdownEditorWidget.cpp  MarkdownEditorWidget.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  MarkdownPreviewWidget.cpp  MarkdownPreviewWidget.h  WelcomePage.cpp  WelcomePage.h  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
